--- a/views/home.hbs
+++ b/views/home.hbs
@@ -133,12 +133,20 @@
       </div>
     </div>
     <div id="replyButtonContainer">
-      <div class="addCommentContainer">
+      {{!-- <div class="addCommentContainer">
         <h1>Add a comment...</h1>
       </div>
       <div class="postContainer">
         <i class="fas fa-arrow-up"></i>
+      </div> --}}
+
+      <div id="sendContainerHome">
+        <input type="text" id="msgInputHome" placeholder="Add a comment...">
+        <div id="sendButtonHome">
+          <i class="fas fa-paper-plane"></i>
+        </div>
       </div>
+      
     </div>
   </div>
 </div>
