--- a/views/inbox.hbs
+++ b/views/inbox.hbs
@@ -167,9 +167,11 @@
     <div class="msgBackButton">
       <i class="fas fa-angle-left"></i>
     </div>
-    <input id="friendSearchInput" onkeyup="searchFriends()" type="text" placeholder="Find a teacher by name">
-    <div id="searchFriendButton">
-      <i class="fas fa-search"></i>
+    <div class="searchWrapper">
+      <input id="friendSearchInput" onkeyup="searchFriends()" type="text" placeholder="Find a teacher by name">
+      <div id="searchFriendButton">
+        <i class="fas fa-search"></i>
+      </div>
     </div>
   </div>
   <div class="friendList user-id-4-friend-list">
