--- a/views/search.hbs
+++ b/views/search.hbs
@@ -12,8 +12,8 @@
 </div>
 
 <div id="searchBar">
-  <input id="searchUsersInput" type="text" placeholder="Find a teacher by name">
   <div id="searchUserButton">
+    <input id="searchUsersInput" type="text" placeholder="Find a teacher by name">
     <i class="fas fa-search"></i>
   </div>
 </div>
@@ -25,7 +25,7 @@
         <img src="../images/003-find-my-friend.png" alt="designed by user9641200 from Flaticon">
       </div>
       <div id="greetingMsg">
-        Hello! Here are some <font id="userSubject">Math</font> teachers in your area:
+        Hello! Here are some <font id="userSubject">Math</font> teachers you matched with in your area:
       </div>
     </div>
     <div class="userItem user-id">
@@ -42,7 +42,7 @@
     </div>
     <div class="userItem user-id">
       <div class="user-icon">
-        <img src="../images/avatars/010-woman-6.png">
+        <img src="../images/avatars/012-woman-4.png">
       </div>
       <div class="infoContainer">
         <p class="username"><b>Name</b></p>
@@ -54,7 +54,7 @@
     </div>
     <div class="userItem user-id">
       <div class="user-icon">
-        <img src="../images/avatars/010-woman-6.png">
+        <img src="../images/avatars/014-man-12.png">
       </div>
       <div class="infoContainer">
         <p class="username"><b>Name</b></p>
