--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -27,7 +27,8 @@
   {{{body}}}
 
   <!-- jQuery -->
-  <script src="http://code.jquery.com/jquery-latest.min.js"></script>
+  {{!-- <script src="http://code.jquery.com/jquery-latest.min.js"></script> --}}
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
   <!-- Boostrap -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
     crossorigin="anonymous"></script>
