--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
   <!-- Bootstrap CSS -->
   <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B" crossorigin="anonymous"> -->
   <link href="https://fonts.googleapis.com/css?family=Pacifico|Lato|Roboto:100,300,400" rel="stylesheet">
@@ -12,7 +13,7 @@
   {{!-- <link rel="stylesheet" href="/css/chat.css"> --}}
 
   {{!-- inbox styles --}}
-  <link rel="stylesheet" href="./css/inbox.css">
+  <link rel="stylesheet" href="/css/inbox.css">
 
   {{!-- search styles --}}
   <link rel="stylesheet" href="/css/search.css">
@@ -48,6 +49,6 @@
   <script type="text/javascript" src="/js/app.js"></script>
 
   {{!-- search js --}}
-  <script type="text/javascript" src="../js/search.js"></script>
+  <script type="text/javascript" src="/js/search.js"></script>
 </body>
 </html>
